# Rekishi

./: .gitignore  README.md  hake.hs  rekishi.cabal
backup/: MarketDataStreamClient.hs  SandBoxClient.hs  SimpleClient.hs
src/: Base.hs  Config.hs  Figi.hs  Historical.hs  Main.hs  Portfolio.hs  State.hs  Ticker.hs  Types.hs  Version.hs
