name:           rekishi
version:        0.0.2.2
category:       Finance
author:         Miezhiko
license:        GPLv3
build-type:     Simple
cabal-version:  2.0

executable rekishi
  main-is: Main.hs
  other-modules:
    Types
    Base
    Console
    Version
    Config
    State
    Figi
    Portfolio
    Historical
    Ticker
    Paths_rekishi
  hs-source-dirs:
    src
  default-extensions:
    CPP
    LambdaCase
    MultiWayIf
    UnicodeSyntax
    DataKinds
    OverloadedLabels
    OverloadedStrings
    ViewPatterns
  build-depends:
      base
    , base-unicode-symbols
    , async
    , containers
    , text
    , aeson
    , yaml
    , lens
    , tinkoff-invest-sdk
    , proto-lens
    , time
    , ansi-terminal
    , terminfo
  default-language: Haskell2010
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N
